fix body padding and overflow-y

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 #app {
   position: absolute;
   display: flex;
@@ -23,13 +27,4 @@
   height: calc(100% - 160px);
   position: relative;
   overflow: auto;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  overflow-y: hidden;
-}
-body:hover {
-  overflow-y: scroll;
 }
